<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.walkbear.spring-learn</groupId>
    <artifactId>spring-learn</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <modules>
        <module>spring-learn-web</module>
        <module>spring-learn-common</module>
        <module>spring-learn-persistence</module>
        <module>spring-learn-persistence-api</module>
        <module>spring-learn-service-api</module>
        <module>spring-learn-service</module>
    </modules>

    <properties>
        <!--local module start-->
        <spring-learn>1.0.0</spring-learn>
        <!--local module end-->

        <cglib.version>3.2.1</cglib.version>
        <asm.version>5.1</asm.version>

        <mockito.version>1.10.19</mockito.version>
        <junit.version>4.12</junit.version>
        <testng.version>6.9.10</testng.version>

        <spring.version>5.0.1.RELEASE</spring.version>
        <slf4j.version>1.7.24</slf4j.version>
        <log4j.over.slf4j.version>1.7.24</log4j.over.slf4j.version>
        <logback.version>1.1.11</logback.version>
        <lombok.version>1.16.0</lombok.version>

        <commons-lang3.version>3.1</commons-lang3.version>


        <druid.version>1.1.2</druid.version>

        <mysql.version>5.1.40</mysql.version>
        <mybatis.version>3.4.2</mybatis.version>
        <mybatis-spring.version>1.3.1</mybatis-spring.version>
        <mybatis-generator-core.version>1.3.2</mybatis-generator-core.version>
        <mybatis-redis-cache.version>1.0.0-beta2</mybatis-redis-cache.version>

        <!--maven plugin start-->
        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
        <maven.jar.plugin.version>2.6</maven.jar.plugin.version>
        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
        <maven.war.plugin.version>2.4</maven.war.plugin.version>
        <autoconfig-plugin.version>1.2</autoconfig-plugin.version>
        <!--maven plugin end-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <meminitial>1024m</meminitial>
                    <maxmem>1024m</maxmem>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>-XX:-UseSplitVerifier</argLine>
                    <!-- 打包过程忽略Junit测试 -->
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>sibu-nexus</id>
            <name>sibu-nexus</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>Nexus Release Repository</name>
            <url>http://45.62.108.159:8081/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Nexus Snapshot Repository</name>
            <url>http://45.62.108.159:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <!--local module start-->
            <dependency>
                <groupId>com.walkbear.spring-learn</groupId>
                <artifactId>spring-learn-common</artifactId>
                <version>${spring-learn}</version>
            </dependency>

            <dependency>
                <groupId>com.walkbear.spring-learn</groupId>
                <artifactId>spring-learn-service-api</artifactId>
                <version>${spring-learn}</version>
            </dependency>

            <dependency>
                <groupId>com.walkbear.spring-learn</groupId>
                <artifactId>spring-learn-service</artifactId>
                <version>${spring-learn}</version>
            </dependency>

            <dependency>
                <groupId>com.walkbear.spring-learn</groupId>
                <artifactId>spring-learn-persistence-api</artifactId>
                <version>${spring-learn}</version>
            </dependency>

            <dependency>
                <groupId>com.walkbear.spring-learn</groupId>
                <artifactId>spring-learn-persistence</artifactId>
                <version>${spring-learn}</version>
            </dependency>
            <!--local module end-->

            <!--apache common jar start-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <!--apache common jar end-->

            <!--代理相关start-->
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>

            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <!--代理相关end-->

            <!--test related begin -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <!--test related begin -->

            <!-- alibaba druid 数据库连接池 begin -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <!-- alibaba druid 数据库连接池 end -->

            <!--mybatis start-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-core</artifactId>
                <version>${mybatis-generator-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.caches</groupId>
                <artifactId>mybatis-redis</artifactId>
                <version>${mybatis-redis-cache.version}</version>
            </dependency>
            <!--mybatis end-->

            <!-- lombok start-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>compile</scope>
            </dependency>
            <!--lombok end-->

            <!--log related start-->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-parent</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <!--log related end-->

            <!--spring start-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <!--spring end-->
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <devModel>dev</devModel>
                <autoconfig.properties>dev-app.properties</autoconfig.properties>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <devModel>test</devModel>
                <autoconfig.properties>test-app.properties</autoconfig.properties>
            </properties>
        </profile>
        <profile>
            <id>product</id>
            <properties>
                <devModel>product</devModel>
                <autoconfig.properties>product-app.properties</autoconfig.properties>
            </properties>
        </profile>
    </profiles>

</project>